@@ -28,6 +28,10 @@ Features
   more information.  This is not a new feature, it just provides an API for
   adding a traverser without needing to use the ZCA API.
 
+- The system value ``r`` is now supplied to renderers as an alias for
+  ``request``.  This means that you can now, for example, in a template, do
+  ``r.route_url(...)`` instead of ``request.route_url(...)``.
+
 Documentation
 -------------
 
